## Process this file with automake to produce Makefile.in

initdir = $(sysconfdir)/init
dist_init_DATA = \
	mountall.conf \
	mountall-net.conf \
	mountall-reboot.conf \
	mountall-shell.conf \
	mounted-debugfs.conf \
	mounted-dev.conf \
	mounted-run.conf \
	mounted-proc.conf \
	mounted-tmp.conf \
	mounted-var.conf \
	mountall.sh.conf \
	mountall-bootclean.sh.conf \
	mountkernfs.sh.conf \
	mountdevsubfs.sh.conf \
	bootmisc.sh.conf \
	checkfs.sh.conf \
	checkroot-bootclean.sh.conf \
	checkroot.sh.conf \
	mountnfs.sh.conf \
	mountnfs-bootclean.sh.conf \
	mtab.sh.conf

